[gd_scene load_steps=9 format=3 uid="uid://bwxcyxwbmw2uq"]

[ext_resource type="Texture2D" uid="uid://ca4y3ff80t36f" path="res://Assets/Background/background.png" id="1_ivplr"]
[ext_resource type="Script" path="res://Stages/MainMenu.gd" id="1_kqdml"]
[ext_resource type="PackedScene" uid="uid://5a6xul3u481j" path="res://Stages/StageLimits.tscn" id="2_hgivu"]
[ext_resource type="Theme" uid="uid://d0n3nqyxcgwle" path="res://Assets/Themes/Label.tres" id="2_jlp4c"]
[ext_resource type="Texture2D" uid="uid://cdc7ok2bokcv5" path="res://Assets/Background/Foreground.png" id="3_u36re"]
[ext_resource type="PackedScene" uid="uid://c4w502nr6epji" path="res://Player/Player.tscn" id="4_dw732"]
[ext_resource type="PackedScene" uid="uid://bejp05w8866c2" path="res://Components/ActionArea.tscn" id="5_r48b0"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qml0d"]
blend_mode = 1

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kqdml")

[node name="Limits" parent="." instance=ExtResource("2_hgivu")]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(572, 333)
scale = Vector2(1.12695, 0.641602)
texture = ExtResource("1_ivplr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
offset_left = 13.0
offset_top = 16.0
offset_right = 447.0
offset_bottom = 96.0
scale = Vector2(1.33606, 1.43492)
theme = ExtResource("2_jlp4c")
theme_override_font_sizes/font_size = 80
text = "Ink Dragon"
uppercase = true

[node name="Controls" type="Label" parent="Control"]
layout_mode = 1
offset_left = 201.0
offset_top = 506.0
offset_right = 545.0
offset_bottom = 604.0
scale = Vector2(1.33606, 1.43492)
theme = ExtResource("2_jlp4c")
theme_override_font_sizes/font_size = 15
text = "A -> Turn Counter-Clockwise
D -> Turn Clockwise
W, Space, Left mouse button -> Fire-Ball 
Esc -> Pause"
uppercase = true

[node name="LanguageMenu" type="MenuButton" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 741.0
offset_top = 25.0
offset_right = 946.0
offset_bottom = 74.0
grow_horizontal = 0
theme = ExtResource("2_jlp4c")
theme_override_font_sizes/font_size = 25
text = "LINGUA"
item_count = 3
popup/item_0/text = "Portugês"
popup/item_0/id = 0
popup/item_1/text = "Español"
popup/item_1/id = 1
popup/item_2/text = "English"
popup/item_2/id = 2

[node name="Start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 990.0
offset_top = 41.0
offset_right = 1108.0
offset_bottom = 151.0
flat = true

[node name="About" type="Button" parent="Control"]
layout_mode = 0
offset_left = 996.0
offset_top = 517.0
offset_right = 1114.0
offset_bottom = 627.0
flat = true

[node name="Exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 35.0
offset_top = 514.0
offset_right = 153.0
offset_bottom = 624.0
flat = true

[node name="Foreground" type="Sprite2D" parent="."]
z_index = 996
material = SubResource("CanvasItemMaterial_qml0d")
position = Vector2(572, 333)
scale = Vector2(1.12695, 0.641602)
texture = ExtResource("3_u36re")

[node name="Player" parent="." instance=ExtResource("4_dw732")]
position = Vector2(41, 320)
Imune = true

[node name="ActionAreaStart" parent="." instance=ExtResource("5_r48b0")]
position = Vector2(1049, 97)
AreaText = "Start"
Key = "START"

[node name="ActionAreaAbout" parent="." instance=ExtResource("5_r48b0")]
position = Vector2(1055, 572)
AreaText = "About"
Key = "ABOUT"

[node name="ActionAreaQuit" parent="." instance=ExtResource("5_r48b0")]
position = Vector2(94, 572)
scale = Vector2(1.00218, 1.03771)
AreaText = "Quit"
Key = "QUIT"

[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
[connection signal="ActionActivated" from="ActionAreaStart" to="." method="_on_action_area_start_action_activated"]
[connection signal="ActionActivated" from="ActionAreaAbout" to="." method="_on_action_area_about_action_activated"]
[connection signal="ActionActivated" from="ActionAreaQuit" to="." method="_on_action_area_quit_action_activated"]
